[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluorologger"
authors = [
    {name = "Brett Longworth", email = "blongworth@whoi.edu"}
]
description = "Acquire and log underway fluorometer, GPS, and TSG data"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nidaqmx==0.9.0",
    "numpy==1.26.4",
    "pynmeagps==1.0.36",
    "pyserial==3.5",
    "pyyaml==6.0.2",
]

[project.scripts]
fluorologger = "fluorologger.main:main"